# ToyServer

./: CMakeLists.txt  server.hpp  start.sh
src/: CMakeLists.txt  connection.cpp  connection.hpp  connection_manager.cpp  connection_manager.hpp  header.hpp  main.cpp  mime_types.cpp  mime_types.hpp  reply.cpp  reply.hpp  request.hpp  request_handler.cpp  request_handler.hpp  request_parser.cpp  request_parser.hpp  route_manager.cpp  route_manager.hpp  server.cpp  server.hpp
